# raynest

./: .gitignore  DESCRIPTION.rst  INSTALL.txt  MANIFEST.in  README.rst  pyproject.toml  setup.py
examples/: ackley.py  burst.py  eggbox.py  eggbox_profile.py  gaussianmixture.py  memory_footprint.py  rosenbrock.py  test_50d.py
raynest/: NestedSampling.py  __init__.py  figaro_gradient.py  model.py  nest2pos.py  parameter.c  parameter.pyx  proposal.py  raynest.py  sampler.py  utils.py
raynest/tests/: test_1d.py  test_2d.py  test_2d_hmc.py  test_2d_slice.py  test_gaussian.py  test_ring_slice.py  test_verbosity.py
tests/: test_half_gaussian.py  test_ring.py
