[build-system]
requires = [
  "setuptools>=61.0",
  "wheel",
  "cython",
  "numpy"
]
build-backend = "setuptools.build_meta"

[project]
name = "raynest"
description = "raynest: Parallel nested sampling based on ray"
version = "1.1.2"
requires-python = ">=3.9"
readme = {file = "README.rst", content-type = "text/plain"}
license = {file = "LICENSE"}
keywords = ["nested", "sampling", "bayesian", "inference"]
authors = [
  {name = "Walter Del Pozzo", email = "walter.delpozzo@ligo.org"},
  {name = "John Veitch", email = "john.veitch@ligo.org"}
]
dependencies = [
  "numpy",
  "scipy",
  "corner",
  "dill",
  "tqdm",
  "matplotlib",
  "ray",
  "h5py",
  "psutil",
]

[project.urls]
Homepage = "https://github.com/wdpozzo/raynest"
Repository = "https://github.com/wdpozzo/raynest"
